--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
         <div class="visualizer-area">
             <div class="visualizer-container">
-                <iframe src="visualizer.html" title="Aerospace Logistics Visualizer"></iframe>
+                <iframe src="./visualizer.html" title="Aerospace Logistics Visualizer"></iframe>
             </div>
         </div>
     </div>
